@@ -7,6 +7,8 @@ plugins {
 
 android {
     namespace = "ru.erdenian.studentassistant.homeworks"
+
+    testOptions.unitTests.all { it.jvmArgs("--add-opens=java.base/java.time=ALL-UNNAMED") }
 }
 
 dependencies {
@@ -19,6 +21,10 @@ dependencies {
     implementation(project(":features:repository:api"))
     implementation(project(":features:homeworks:api"))
     implementation(project(":features:schedule:api"))
+    // endregion
+
+    // region Tests
+    testImplementation(libs.bundles.test.unit)
     // endregion
 
     // region AndroidX
